errata corrige  README

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This is the ropository for the course: Progetto di Sistemi Elettronici
+This is the repository for the course: Progetto di Sistemi Elettronici
